discussion: fix word wrap

--- a/client/src/components/MovieSeriesPage/DiscussionComponent/DiscussionComponent.scss
+++ b/client/src/components/MovieSeriesPage/DiscussionComponent/DiscussionComponent.scss
@@ -37,7 +37,7 @@ a:focus {
 	flex-direction: column;
 	div {
 		display: flex;
-	flex-direction: column;
+		flex-direction: column;
 		justify-self: flex-end;
 	}
 	color: $text-base-color;
@@ -126,8 +126,7 @@ a:focus {
 			margin-left: 30px;
 			.body {
 				max-width: calc(100% - 20px);
-				white-space: normal;
-				word-break: break-all;
+				word-wrap: break-word;
 			}
 
 			.name {
